apps/base/bitwarden/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bitwarden
  annotations:
    cnrm.cloud.google.com/project-id: jtcressy-net-235001
